--- a/estilos/style.css
+++ b/estilos/style.css
@@ -11,16 +11,20 @@ lilás: #5f2c82
     margin: 0px;
     box-sizing: border-box;
 }
-body, html {
+
+body,
+html {
     background-color: #5f2c82;
     height: 100vh;
     width: 100vw;
 }
+
 main {
     position: relative;
     height: 100vh;
     width: 100vw;
 }
+
 section#login {
     position: absolute;
     top: 50%;
@@ -38,27 +42,28 @@ section#login {
     transition: width .3s, height .3s;
     transition-timing-function: ease;
 }
-section#login > div#imagem {
+
+section#login>div#imagem {
     background: #5f2c82 url(../imagens/paisagem.png);
     height: 200px;
     background-size: cover;
 }
 
-section#login > div#formulario {
+section#login>div#formulario {
     display: block;
     padding: 10px;
 }
 
-div#formulario > h1 {
+div#formulario>h1 {
     text-align: center;
     margin-bottom: 10px;
 }
 
-div#formulario > p {
+div#formulario>p {
     font-size: 0.9em;
 }
 
-form > div.campo {
+form>div.campo {
     display: block;
     background-color: #5f2c82;
     border: 3px solid #5f2c82;
@@ -68,18 +73,19 @@ form > div.campo {
     margin: 5px 0px;
 }
 
-div.campo > label {
+div.campo>label {
     display: none;
 }
 
-div.campo > span {
+div.campo>span {
     color: white;
-    
+
     font-size: 2em;
     width: 40px;
     padding: 5px;
 }
-div.campo > input {
+
+div.campo>input {
     background-color: #57c0bd;
     font-size: 1em;
     width: calc(100% - 44px);
@@ -87,14 +93,14 @@ div.campo > input {
     border-radius: 8px;
     padding: 4px;
 
-    transform: translate3d(44px, -42px, 0px);  
-} 
+    transform: translate3d(44px, -42px, 0px);
+}
 
-div.campo > input:focus-within {
+div.campo>input:focus-within {
     background-color: white;
 }
 
-form > input[type=submit] {
+form>input[type=submit] {
     display: block;
     background-color: #49a09d;
     color: white;
@@ -105,10 +111,12 @@ form > input[type=submit] {
     border-radius: 5px;
     cursor: pointer;
 }
-form > input[type=submit]:hover {
+
+form>input[type=submit]:hover {
     background-color: #57c0bd;
 }
-form > a.botao {
+
+form>a.botao {
     display: block;
     text-align: center;
     font-size: 1em;
@@ -122,10 +130,12 @@ form > a.botao {
     border-radius: 7px;
     text-decoration: none;
 }
-form > a.botao:hover {
+
+form>a.botao:hover {
     background-color: #57c0bd;
     color: white;
 }
-form > a.botao > span {
+
+form>a.botao>span {
     font-size: 0.9em;
 }
