--- a/estilos/style.css
+++ b/estilos/style.css
@@ -93,6 +93,9 @@ div.campo>input {
     border-radius: 8px;
     padding: 4px;
 
+    position: relative;
+    top: 0%;
+    left: 0%;
     transform: translate(23%, -123%)
 }
 
